# lokalized

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  extension.toml  extension.wasm
.github/workflows/: ci.yml  release.yml
crates/i18n-core/: Cargo.toml
crates/i18n-core/src/: config.rs  display.rs  framework.rs  index.rs  lib.rs  locale.rs  mutation.rs  parser.rs  position.rs  scan.rs
crates/i18n-core/src/parser/: json.rs
crates/i18n-core/tests/: integration.rs
crates/i18n-core/tests/fixtures/flat_project/locales/: en.json  fr.json
crates/i18n-core/tests/fixtures/nested_project/locales/en/: common.json
crates/i18n-core/tests/fixtures/nested_project/locales/fr/: common.json
crates/lsp-server/: Cargo.toml
crates/lsp-server/src/: main.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
src/: lib.rs
