[package]
name = "i18n-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core i18n logic: locale parsing, key indexing, framework detection"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
