[package]
name = "lokalize-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Language server for the Lokalize (i18n) Zed extension"

[[bin]]
name = "lokalize-lsp"
path = "src/main.rs"

[dependencies]
i18n-core.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
